# anizoom

./: .gitignore  README.md  flake.nix  nuxt.config.ts  package.json
components/video/: Modal.vue
layouts/: default.vue
pages/a/[id]/[slug]/: index.vue
pages/c/: index.vue
public/: site.webmanifest
src-tauri/: Cargo.toml  tauri.conf.json
utils/: info.ts
